feat: Refactor task handling in AgentExecutionManager and CallAgentTool for A2A compliance and improved artifact management